--- a/notas/notas.bib
+++ b/notas/notas.bib
@@ -43,6 +43,20 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/W9KE4PQ6/Hatcher.pdf}
 }
 
+@book{hungerfordAlgebra1980,
+  title = {Algebra},
+  author = {Hungerford, Thomas W.},
+  date = {1980},
+  series = {Graduate {{Texts}} in {{Mathematics}}},
+  volume = {73},
+  publisher = {Springer},
+  location = {New York, NY},
+  doi = {10.1007/978-1-4612-6101-8},
+  isbn = {978-1-4612-6103-2 978-1-4612-6101-8},
+  keywords = {Adjoint functor,algebra,Coproduct,field,finite group,Galois theory,homomorphism,linear algebra,matrices,semigroup,transformation},
+  file = {/Users/abrahamrojasvega/Zotero/storage/VADZBH7A/Hungerford - 1980 - Algebra.pdf}
+}
+
 @misc{kupersHomologicalStabilityMinicourse2021,
   title = {Homological {{Stability Minicourse}}},
   author = {Kupers, Alexander},
@@ -65,6 +79,17 @@
   file = {/Users/abrahamrojasvega/Zotero/storage/9AMW2G9Y/May - 1967 - Simplicial objects in algebraic topology.pdf}
 }
 
+@book{richterCategoriesHomotopyTheory2020,
+  title = {From {{Categories}} to {{Homotopy Theory}}},
+  author = {Richter, Birgit},
+  date = {2020-04-16},
+  edition = {1},
+  publisher = {Cambridge University Press},
+  doi = {10.1017/9781108855891},
+  isbn = {978-1-108-85589-1 978-1-108-47962-2},
+  file = {/Users/abrahamrojasvega/Zotero/storage/28Z48F8D/Richter - 2020 - From Categories to Homotopy Theory.pdf}
+}
+
 @incollection{suslinStabilityAlgebraicKtheory1982,
   title = {Stability in Algebraic {{K-theory}}},
   booktitle = {Algebraic {{K-Theory}}},
@@ -79,4 +104,19 @@
   isbn = {978-3-540-11965-4 978-3-540-39553-9},
   langid = {english},
   file = {/Users/abrahamrojasvega/Zotero/storage/ACEER5D3/Suslin - 1982 - Stability in algebraic K-theory.pdf}
+}
+
+@online{wahlHomologicalStabilityTool2022,
+  title = {Homological Stability: A Tool for Computations},
+  shorttitle = {Homological Stability},
+  author = {Wahl, Nathalie},
+  date = {2022-03-15},
+  eprint = {2203.07767},
+  eprinttype = {arXiv},
+  eprintclass = {math},
+  doi = {10.48550/arXiv.2203.07767},
+  abstract = {Homological stability has shown itself to be a powerful tool for the computation of homology of families of groups such as general linear groups, mapping class groups or automorphisms of free groups. We survey here tools and techniques for proving homological stability theorems and for computing the stable homology, and illustrate the method through the computation of the homology of Higman-Thompson groups.},
+  pubstate = {prepublished},
+  keywords = {Mathematics - Algebraic Topology,Mathematics - Geometric Topology},
+  file = {/Users/abrahamrojasvega/Zotero/storage/39AWFBQG/Wahl - 2022 - Homological stability a tool for computations.pdf;/Users/abrahamrojasvega/Zotero/storage/YDTFIHHZ/2203.html}
 }
